--- a/index.html
+++ b/index.html
@@ -513,8 +513,8 @@
 
 		</div>
 			<div class = "rotateIcon">
-				<a class = "tooltip" id = "infoButton" style = "background: url(/images/info.svg); background-size: cover;"    ><span class="tooltiptext">Thesis project</span></a>
-				<a class = "tooltip" id = "rotatePause" style = "background: url(/images/rotateIcon.jpg); background-size: cover;" href="#"   ><span class="tooltiptext">Enable/disable automatic rotation</span></a>
+				<a class = "tooltip" id = "infoButton" style = "background: url(/Images/info.svg); background-size: cover;"    ><span class="tooltiptext">Thesis project</span></a>
+				<a class = "tooltip" id = "rotatePause" style = "background: url(/Images/rotateIcon.jpg); background-size: cover;" href="#"   ><span class="tooltiptext">Enable/disable automatic rotation</span></a>
 			</div>
 		<!-- The navigation menu -->
 
@@ -534,7 +534,7 @@
 					<text> Main colour </text>
 				<a id = "secondary-colour" style="background-color : #000000" onclick="exteriorsecondaryFunction(this)" href="#"></a>
 					<text> Secondary colour </text>
-				<a id = "wheels" style="background: url(/images/WheelDefault.png); background-size: cover;" onclick="wheelsFunction(this)" href="#"></a>
+				<a id = "wheels" style="background: url(/Images/WheelDefault.png); background-size: cover;" onclick="wheelsFunction(this)" href="#"></a>
 					<text> Wheels </text>
 			</div>
 
@@ -543,16 +543,16 @@
 					<text> Colour one </text>
 				<a id = "Interiorcolour2" onclick="interiorsecondaryFunction(this)" style="background-color : #000000" href="#"></a>
 					<text> Colour two </text>
-<!--				<a id = "steeringWheel" style="background: url(/images/SteeringWheelDefault.png); background-size: cover;" onclick="steeringWheelFunction(this)" href="#"></a>
+<!--				<a id = "steeringWheel" style="background: url(/Images/SteeringWheelDefault.png); background-size: cover;" onclick="steeringWheelFunction(this)" href="#"></a>
 					<text> ??? </text>-->
 			</div>
 
 			<div id = "optionsSidenav" class = "sidenav">
-				<a id = "option1" class = "5000" style="background: url(/images/remoteEngineStart.jpg); background-size: cover;" onclick="checkBox1(this)" href="#">   <img id = "checkBox1" src="/images/check-mark.png" style="width: 7.8125vw; height: 7.8125vw; z-index: 2; margin: 0px; visibility: hidden; background-color: rgb(255,255,255, 0.5)";   /> </a>
+				<a id = "option1" class = "5000" style="background: url(/Images/remoteEngineStart.jpg); background-size: cover;" onclick="checkBox1(this)" href="#">   <img id = "checkBox1" src="/Images/check-mark.png" style="width: 7.8125vw; height: 7.8125vw; z-index: 2; margin: 0px; visibility: hidden; background-color: rgb(255,255,255, 0.5)";   /> </a>
 					<text  style="font-size: 9px; line-height: normal" > Remote engine start <br>+&euro;5000 </text>
-				<a id = "option2" class = "20000" style="background: url(/images/parkAssist3.webp); background-size: cover;" onclick="checkBox2(this)" href="#">	 <img id = "checkBox2" src="/images/check-mark.png" style="width: 7.8125vw; height: 7.8125vw; z-index: 2; margin: 0px; visibility: hidden; background-color: rgb(255,255,255, 0.5)";   /> </a>
+				<a id = "option2" class = "20000" style="background: url(/Images/parkAssist3.webp); background-size: cover;" onclick="checkBox2(this)" href="#">	 <img id = "checkBox2" src="/Images/check-mark.png" style="width: 7.8125vw; height: 7.8125vw; z-index: 2; margin: 0px; visibility: hidden; background-color: rgb(255,255,255, 0.5)";   /> </a>
 					<text style="font-size: 9px; line-height: normal"> Parking assistance <br>+&euro;20000  </text>
-				<a id = "option3" class = "10000" style="background: url(/images/heatedSteeringWheel.jpg); background-size: cover;" onclick="checkBox3(this)" href="#"> <img id = "checkBox3" src="/images/check-mark.png" style="width: 7.8125vw; height: 7.8125vw; z-index: 2; margin: 0px; visibility: hidden; background-color: rgb(255,255,255, 0.5)";   /></a>
+				<a id = "option3" class = "10000" style="background: url(/Images/heatedSteeringWheel.jpg); background-size: cover;" onclick="checkBox3(this)" href="#"> <img id = "checkBox3" src="/Images/check-mark.png" style="width: 7.8125vw; height: 7.8125vw; z-index: 2; margin: 0px; visibility: hidden; background-color: rgb(255,255,255, 0.5)";   /></a>
 					<text style="font-size: 9px; line-height: normal">Heated steering wheel<br>+&euro;10000  </text>
 			</div>
 
@@ -624,12 +624,12 @@
 
 			<div class = "scrollcontainer">
 				<div id = "wheelsScrollbar" class="scrollbar">
-				<a id="wheelsOptionDefault" style="background: url(/images/WheelDefault.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption" style="background-color : #000000" href="#" onclick= "wheelsPicker(this)" >Default</a>
-				<a id="wheelsOptionTwo" style="background: url(/images/WheelOptionTwo.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption 5000" style="background-color : #000000" href="#" onclick= "wheelsPicker(this)" >Option 2 (+&euro;5000)</a>
+				<a id="wheelsOptionDefault" style="background: url(/Images/WheelDefault.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption" style="background-color : #000000" href="#" onclick= "wheelsPicker(this)" >Default</a>
+				<a id="wheelsOptionTwo" style="background: url(/Images/WheelOptionTwo.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption 5000" style="background-color : #000000" href="#" onclick= "wheelsPicker(this)" >Option 2 (+&euro;5000)</a>
 									<b> Default</b>
 									<b> Option 2<br>(+&euro;5000) </b>
-				<a id="wheelsOptionThree" style="background: url(/images/WheelOptionThree.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption 10000" style="background-color : #808080" href="#" onclick= "wheelsPicker(this)" >Option 3 (+&euro;10000)</a>
-				<a id="wheelsOptionOne" style="background: url(/images/WheelOptionOne.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption 20000" style="background-color : #808080" href="#" onclick= "wheelsPicker(this)" >Option 4 (+&euro;20000)</a>
+				<a id="wheelsOptionThree" style="background: url(/Images/WheelOptionThree.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption 10000" style="background-color : #808080" href="#" onclick= "wheelsPicker(this)" >Option 3 (+&euro;10000)</a>
+				<a id="wheelsOptionOne" style="background: url(/Images/WheelOptionOne.png); background-size: cover; text-indent: 100%; white-space: nowrap; overflow: hidden;" class="wheelsOption 20000" style="background-color : #808080" href="#" onclick= "wheelsPicker(this)" >Option 4 (+&euro;20000)</a>
 									<b> Option 3<br>(+&euro;10000) </b>
 									<b> Option 4<br>(+&euro;20000) </b>
 
@@ -700,8 +700,8 @@
 
 			<div class = "scrollcontainer">
 				<div id = "steeringWheelScrollbar" class="scrollbar">
-<!-- 			<a id="steeringWheelOptionDefault" style="background: url(/images/SteeringWheelDefault.png); background-size: cover;" class="steeringWheelOption" style="background-color : #000000" href="#" onclick= "steeringWheelPicker(this)" ></a>
-				<a id="steeringWheelOptionOne" style="background: url(/images/SteeringWheelOptionOne.png); background-size: cover;" class="steeringWheelOption" style="background-color : #808080" href="#" onclick= "steeringWheelPicker(this)" ></a>
+<!-- 			<a id="steeringWheelOptionDefault" style="background: url(/Images/SteeringWheelDefault.png); background-size: cover;" class="steeringWheelOption" style="background-color : #000000" href="#" onclick= "steeringWheelPicker(this)" ></a>
+				<a id="steeringWheelOptionOne" style="background: url(/Images/SteeringWheelOptionOne.png); background-size: cover;" class="steeringWheelOption" style="background-color : #808080" href="#" onclick= "steeringWheelPicker(this)" ></a>
 									<b> Default<br>(+&euro;1000) </b>
 									<b> Option 2<br>(+&euro;1000) </b>
 -->
@@ -724,7 +724,7 @@
 									<b style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; margin-bottom: 0px; height: auto;" >Secondary colour:</b>
 									<b id = "summarySecondaryColor" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; margin-top: 0px; " >Black</b>
 									
-				<a id = "summary3" class="summaryThings" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/images/WheelDefault.png); background-size: cover;"></a>
+				<a id = "summary3" class="summaryThings" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/Images/WheelDefault.png); background-size: cover;"></a>
 									<b style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; margin-bottom: 0px; height: auto;" >Wheels:</b>
 									<b id = "summaryWheels" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; margin-top: 0px; " >Default</b>
 
@@ -738,16 +738,16 @@
 									<b id = "summaryColor2" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; margin-top: 0px; " >Blue</b>									
 
 						<b style = "width: 12.6874vw; margin-top:4vh; margin-left: 1vw; background-color: #D3D3D3; border-radius: 5px; line-height: 100%; font-size: 1.5vw; padding-top: 0.5vw  "> Options </b>
-				<a id = "summary6" class="summaryThings summaryOption1" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/images/remoteEngineStart.jpg); background-size: cover; display: none;"></a>
+				<a id = "summary6" class="summaryThings summaryOption1" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/Images/remoteEngineStart.jpg); background-size: cover; display: none;"></a>
 									<b class="summaryOption1" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; display: none; " >Remote engine start (+&euro;5000)</b>
 
-				<a id = "summary7" class="summaryThings summaryOption2" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/images/parkAssist3.webp); background-size: cover; display: none;"></a>
+				<a id = "summary7" class="summaryThings summaryOption2" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/Images/parkAssist3.webp); background-size: cover; display: none;"></a>
 									<b class="summaryOption2" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; display: none; " >Parking assistance (+&euro;20000)</b>
 									
-				<a id = "summary8" class="summaryThings summaryOption3" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/images/heatedSteeringWheel.jpg); background-size: cover; display: none;"></a>
+				<a id = "summary8" class="summaryThings summaryOption3" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/Images/heatedSteeringWheel.jpg); background-size: cover; display: none;"></a>
 									<b class="summaryOption3" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; display: none; " >Heated steering wheel (+&euro;10000)</b>
 
-				<a id = "summary9" class="summaryThings" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/images/no.png); background-size: cover; display: inline-block;"></a>
+				<a id = "summary9" class="summaryThings" style="background-color : #0000FF;   margin-left: 3.2vw; height: 8vw; width: 8vw; background: url(/Images/no.png); background-size: cover; display: inline-block;"></a>
 									<b id = "summaryNoOptions" style = "width: 12.6874vw; margin-left: 1vw; font-size: 0.8vw; display: inline-block; " >No options selected</b>
 
 						<b style = "width: 12.6874vw; margin-top:4vh; margin-left: 1vw; background-color: #D3D3D3; border-radius: 5px; line-height: 100%; font-size: 1.5vw; padding-top: 0.5vw  "> Total price </b>
